--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   },
   "dependencies": {
     "express": "3.0.0rc5",
-    "hbs": "*",
+    "ejs": "*",
     "node-sass": "*",
     "underscore": "*",
-    "mongoose": ">= 3.3.1"
+    "mongoose": ">= 3.3.1",
+    "consolidate": "~0.5.0"
   }
 }
