--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
   },
   "dependencies": {
     "express": "3.0.0rc5",
-    "ejs": "*",
+    "jade": "*",
     "node-sass": "*",
     "underscore": "*",
-    "mongoose": ">= 3.3.1",
-    "consolidate": "~0.5.0"
+    "mongoose": ">= 3.3.1"
   }
 }
