--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "application-name",
-  "version": "0.0.1",
+  "name": "lexbox",
+  "version": "0.0.2",
   "private": true,
   "scripts": {
     "start": "node app"
@@ -10,6 +10,8 @@
     "jade": "*",
     "node-sass": "*",
     "underscore": "*",
-    "mongoose": ">= 3.3.1"
+    "mongoose": "3.5.5",
+      "mocha": "*",
+      "chai": "*"
   }
 }
